--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <p>Mis datos de contacto son: telefono: 3155809663</p>
     <br>Mi perfil de skype: live:jcgp88
     <br>Mi correo es: Jcgp88@hotmail.com
+    <hr>
+    <a href="fase 2/design.html"> Actividad Corresondiente a la fase 2 del programa Diseño de Sitios WEb </a>
 </body>
 </html>
