--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <br>Mi correo es: Jcgp88@hotmail.com
     <hr>
     <a href="fase 2/design.html"> Actividad Corresondiente a la fase 2 del programa Diseño de Sitios WEb </a>
+    <br>
+    <a href="fase 2/fase 3/iniciof3.html">actividad correspondiente a la fase 3</a>
 </body>
 </html>
