--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <a href="fase 2/design.html"> Actividad Corresondiente a la fase 2 del programa Diseño de Sitios WEb </a>
     <br>
     <a href="fase 2/fase 3/iniciof3.html">actividad correspondiente a la fase 3</a>
+    <br>
+    <a href="fase 2/fase 4/paginas/iniciof34.html">actividad correspondiente a la fase 4</a>
 </body>
 </html>
